# data-portal-framework

./: .gitignore  Dockerfile  README.md  elections.csv  pyproject.toml
dpf/: api.py  cli.py
dpf/db/: database.py  models.py
dpf/lib/: db.py
dpf/modules/covid/: __init__.py  cli.py  models.py  routes.py  schemas.py
dpf/modules/covid/website/: index.html
dpf/modules/covid/website/static/: main.css
dpf/modules/elections/: __init__.py  cli.py  models.py  routes.py
dpf/modules/elections/website/: index.html
website/: index.html
