[project]
name = "data-portal-framework"
version = "0.1"
description = ""
authors = [
    {name = "Clément Schreiner", email = "clement@mux.me"},
]
dependencies = [
    "fastapi>=0.75.2",
    "jinja2>=3.1.2",
    "uvicorn>=0.17.6",
    "sqlalchemy>=1.4.36",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
dpf = "dpf.cli:main"